--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -27,3 +27,15 @@ body{
     flex-direction: column;
     font-family: "Arial",sans-serif ;
 }
+
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+ul,ol{
+    list-style-type: none;
+}
